bk_ida/gccida/c3/deallocate_reload_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/deallocate_reload_reg/src/reload1.c:6474:17: error: expected expression
*( reload_type *)( v2 + 10629612), 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/deallocate_reload_reg/src/reload1.c:6474:4: error: use of undeclared identifier 'reload_type'; did you mean 'reload_order'?
*( reload_type *)( v2 + 10629612), 
   ^~~~~~~~~~~
   reload_order
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/deallocate_reload_reg/src/reload1.c:1652:14: note: 'reload_order' declared here
static short reload_order[MAX_RELOADS];
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/deallocate_reload_reg/src/reload1.c:6475:18: error: expected expression
*( machine_mode *)( v2 + 10629548)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/deallocate_reload_reg/src/reload1.c:6475:4: error: use of undeclared identifier 'machine_mode'
*( machine_mode *)( v2 + 10629548)); 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/deallocate_reload_reg/src/obj/reload1.o] Error 1
